# smart_campus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: 需求文档.md
frontends/: README.md
frontends/admin-portal/: index.html
frontends/apps/academic-core/: index.html
frontends/apps/academic-master/: index.html
frontends/apps/exam-orchestration/: index.html
frontends/apps/identity-access/: index.html
frontends/apps/marking-engine/: index.html
frontends/apps/oa-collaboration/: index.html
frontends/apps/org-user/: index.html
frontends/apps/question-bank/: index.html
frontends/apps/student-growth/: index.html
scripts/: run_dev.py  run_dev.sh
services/: __init__.py
services/academic_core/: __init__.py
services/academic_core/app/: __init__.py  config.py  main.py  models.py
services/academic_master/: __init__.py
services/academic_master/app/: __init__.py  config.py  main.py  models.py
services/admin_console/: __init__.py
services/admin_console/app/: __init__.py  config.py  main.py  models.py
services/api_gateway/: __init__.py
services/api_gateway/app/: __init__.py  config.py  main.py  models.py
services/exam_orchestration/: __init__.py
services/exam_orchestration/app/: __init__.py  config.py  main.py  models.py
services/identity_access/: __init__.py
services/identity_access/app/: __init__.py  config.py  main.py  models.py
services/marking_engine/: __init__.py
services/marking_engine/app/: __init__.py  config.py  main.py  models.py
services/oa_collaboration/: __init__.py
services/oa_collaboration/app/: __init__.py  config.py  main.py  models.py
services/org_user/: __init__.py
services/org_user/app/: __init__.py  config.py  main.py  models.py
services/question_bank/: __init__.py
services/question_bank/app/: __init__.py  config.py  main.py  models.py
services/question_bank/app/services/: __init__.py
services/student_growth/: __init__.py
services/student_growth/app/: __init__.py  config.py  main.py  models.py
smart-campus-app/: package.json
smart-campus-app/src/: manifest.json  pages.json
smart-campus-infra/: docker-compose.dev.yml  docker-compose.yml
smart-campus-infra/nginx/conf.d/: campus.conf
smart-campus-infra/redis/: redis.conf
smart_campus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
